# photo-processing

./: .gitignore  README.md  convert_to_jpg.py  main.py  pyproject.toml
docs/: chronological_converter.md
photo_processing/: __init__.py
photo_processing/heic_to_jpg/: __init__.py  cli.py  converter.py
tests/: test_converter.py
